fixed so site renders on smaller screen bit better

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 * {
    margin: 0;
    padding: 0;
@@ -69,9 +73,15 @@ body {
   background-color: blue;
 }
 
-.nav a:first-child {
-  margin-left: 603px ;
-  position: relative;
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 10%;
+}
+
+.header img {
+  margin-left: 6vw;
 }
 
 .nav a:first-child::after {
